<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    tools:context=".nfc.AuthenticatedFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_max_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/max_btn" />

        <Button
            android:id="@+id/btn_med_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/med_btn" />

        <Button
            android:id="@+id/btn_low_level"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/low_btn" />

        <TextView
            android:id="@+id/auth_countdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/auth_frag_countdown"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/auth_status"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/auth_frag_status"
            android:textSize="32sp" />
    </LinearLayout>

</FrameLayout>