<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_barcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/code_barre" />

    <Button
        android:id="@+id/button_beacon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ibeacon" />

    <Button
        android:id="@+id/button_nfc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nfc" />
</LinearLayout>